# whiteboard_mpc

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  run_aes_example.sh
bench_scripts/: parties_8.txt  reset_env.sh  run_benchmarks_local.sh
dependencies/: Makefile  circuit.txt  mpc_ffi.h  mpc_runner.cpp  parties.txt  parties_3.txt  parties_8.txt
dependencies/circuits/: aes_sbox.txt  aes_sbox_2.txt  ff2_128_mul.txt  poly_64b_mul_peralta.txt  rr2_128_add.txt  rr2_128_mul.txt
dependencies/emp_agmpc/: abitmp.h  cmpc_config.h  emp-agmpc.h  flexible_input_output.h  fpremp.h  helper.h  mpc.h  netmp.h
examples/: benchmarks.rs
git_hooks/: pre-commit
misc/: ff2_128test.sage  ff2_128test.sage.py
src/: auth_bits.rs  base_func.rs  common_protos.rs  ecgroup.rs  ff2_128.rs  ffi.rs  field.rs  field_macros.rs  func_abit.rs  func_blind_ecdsa.rs  func_com.rs  func_mpc.rs  func_mult.rs  func_net.rs  func_rand.rs  func_thresh_abit.rs  lib.rs  linalg.rs  p256.rs  party.rs  polynomial.rs  prg.rs  punctured_prf.rs  ro.rs  rr2_128.rs  small_fields.rs  utils.rs
src/circuits/: aes.rs  arith.rs  builder.rs  circuit.rs  comcomp.rs  elements.rs  executor.rs  generic_thresh.rs  keccak.rs  mod.rs  sha256.rs
src/func_cote/: kos_cote.rs  mod.rs  silent_cote.rs  softspoken_ote.rs
src/func_ecdsa/: dkls23_ecdsa.rs  mod.rs
src/func_eot/: mod.rs  zzzr23_eot.rs
src/func_thresh/: generic_thresh.rs  mod.rs  rst_thresh.rs
src/func_vole/: dkls23_vole.rs  mod.rs
src/func_zero/: folklore_ro_zero.rs  mod.rs
src/func_zk/: func_zk_pedhash.rs  maurer15_zk.rs  mod.rs
